@@ -38,6 +38,7 @@
     (Daniel Lowrey)
   . Fixed bug #68879 (IP Address fields in subjectAltNames not used)
     (Daniel Lowrey)
+  . Fixed bug #68265 (SAN match fails with trailing DNS dot) (Daniel Lowrey)
 
 - pgsql:
   . Fixed bug #68638 (pg_update() fails to store infinite values).
